--- a/src/Components/Theme/Theme.css
+++ b/src/Components/Theme/Theme.css
@@ -1,5 +1,5 @@
 [data-theme="dark"] {
-  --body-background: black;
+  --body-background: rgb(27, 26, 26);
   --titel: white;
 }
 [data-theme="light"] {
